// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XYChart - debug state line chart rotation: -90 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 19.599999999999994,
          },
          {
            "x": 0,
            "y": 39.19999999999999,
          },
          {
            "x": 0,
            "y": 58.80000000000001,
          },
          {
            "x": 0,
            "y": 78.4,
          },
          {
            "x": 0,
            "y": 98,
          },
          {
            "x": 0,
            "y": 117.6,
          },
          {
            "x": 0,
            "y": 137.2,
          },
          {
            "x": 0,
            "y": 156.8,
          },
          {
            "x": 0,
            "y": 176.4,
          },
          {
            "x": 0,
            "y": 196,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 39.19999999999999,
            "y": 0,
          },
          {
            "x": 78.4,
            "y": 0,
          },
          {
            "x": 117.6,
            "y": 0,
          },
          {
            "x": 156.8,
            "y": 0,
          },
          {
            "x": 196,
            "y": 0,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,196L78.4,137.2L196,0",
      "points": [
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 0 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 19.6,
            "y": 0,
          },
          {
            "x": 39.2,
            "y": 0,
          },
          {
            "x": 58.8,
            "y": 0,
          },
          {
            "x": 78.4,
            "y": 0,
          },
          {
            "x": 98,
            "y": 0,
          },
          {
            "x": 117.6,
            "y": 0,
          },
          {
            "x": 137.2,
            "y": 0,
          },
          {
            "x": 156.8,
            "y": 0,
          },
          {
            "x": 176.4,
            "y": 0,
          },
          {
            "x": 196,
            "y": 0,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 39.19999999999999,
          },
          {
            "x": 0,
            "y": 78.4,
          },
          {
            "x": 0,
            "y": 117.6,
          },
          {
            "x": 0,
            "y": 156.8,
          },
          {
            "x": 0,
            "y": 196,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,196L78.4,137.2L196,0",
      "points": [
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 90 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 19.6,
          },
          {
            "x": 0,
            "y": 39.2,
          },
          {
            "x": 0,
            "y": 58.8,
          },
          {
            "x": 0,
            "y": 78.4,
          },
          {
            "x": 0,
            "y": 98,
          },
          {
            "x": 0,
            "y": 117.6,
          },
          {
            "x": 0,
            "y": 137.2,
          },
          {
            "x": 0,
            "y": 156.8,
          },
          {
            "x": 0,
            "y": 176.4,
          },
          {
            "x": 0,
            "y": 196,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 39.2,
            "y": 0,
          },
          {
            "x": 78.4,
            "y": 0,
          },
          {
            "x": 117.6,
            "y": 0,
          },
          {
            "x": 156.8,
            "y": 0,
          },
          {
            "x": 196,
            "y": 0,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,196L78.4,137.2L196,0",
      "points": [
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 180 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 19.599999999999994,
            "y": 0,
          },
          {
            "x": 39.19999999999999,
            "y": 0,
          },
          {
            "x": 58.80000000000001,
            "y": 0,
          },
          {
            "x": 78.4,
            "y": 0,
          },
          {
            "x": 98,
            "y": 0,
          },
          {
            "x": 117.6,
            "y": 0,
          },
          {
            "x": 137.2,
            "y": 0,
          },
          {
            "x": 156.8,
            "y": 0,
          },
          {
            "x": 176.4,
            "y": 0,
          },
          {
            "x": 196,
            "y": 0,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 39.2,
          },
          {
            "x": 0,
            "y": 78.4,
          },
          {
            "x": 0,
            "y": 117.6,
          },
          {
            "x": 0,
            "y": 156.8,
          },
          {
            "x": 0,
            "y": 196,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,196L78.4,137.2L196,0",
      "points": [
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;
